--- a/BizMapAndroid/app/src/main/AndroidManifest.xml
+++ b/BizMapAndroid/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BizMapAndroid">
+        android:theme="@style/Theme.BizMapAndroid"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true">
